# TopCPToolkit

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  gridSetup.sh  initialSetup.sh  mkdocs.yml  setup.sh  solve_tutorial.sh
.gitlab/ci_scripts/: compare_samples.py  custom_krb5.conf  custom_ssh.conf  input_data18.txt  input_data22.txt  input_mc20.txt  input_mc21.txt  input_mc23.txt  setupATLAS.sh  setup_latest_AA_nightly.sh  setup_latest_AA_release.sh  setup_latest_AB_nightly.sh  setup_latest_AB_release.sh  setup_latest_TopCPToolkitTag.sh  setup_penultimate_AA_release.sh  setup_penultimate_AB_release.sh
.gitlab/ci_templates/: compile_topcptoolkit.yml  release_on_tag.yml  run_topcptoolkit.yml  validate_topcptoolkit.yml
.gitlab/issue_templates/: algo.md  bug.md  feature.md  (+1 more)
.tutorial/: TutorialAlg.cxx  TutorialAlg.h  TutorialConfig.py
docs/: flowchart.txt  index.md
source/: CMakeLists.txt
source/GridSubmission/: CMakeLists.txt
source/GridSubmission/python/: __init__.py  ami.py  analysis.py  grid.py  logger.py
source/GridSubmission/scripts/: MC20_PHYS.py  MC23_PHYS.py  getExamples  submitToGrid.py
source/TopCPToolkit/: CMakeLists.txt
source/TopCPToolkit/PartonHistory/: CalcFourTopPartonHistory.h  CalcHWWPartonHistory.h  CalcHWWnonresonantPartonHistory.h  CalcHZZPartonHistory.h  CalcPartonHistory.h  CalcThqPartonHistory.h  CalcTqgammaPartonHistory.h  CalcTtbarPartonHistory.h  CalcTtbarbbbarPartonHistory.h  CalcTtgammaPartonHistory.h  CalcTthPartonHistory.h  CalcTtwPartonHistory.h  CalcTtzPartonHistory.h  CalcTzqPartonHistory.h  CalcZbPartonHistory.h  PartonHistory.h  PartonHistoryUtils.h
source/TopCPToolkit/Root/: BaseTopology.cxx  BoostedJetTaggersAlg.cxx  CARAlg.cxx  CalcBottomPartonHistory.cxx  CalcFourTopPartonHistory.cxx  CalcGenericPartonHistory.cxx  CalcHWWPartonHistory.cxx  CalcHWWnonresonantPartonHistory.cxx  CalcHZZPartonHistory.cxx  CalcHiggsPartonHistory.cxx  CalcPartonHistory.cxx  CalcPhotonPartonHistory.cxx  CalcThqPartonHistory.cxx  CalcTopPartonHistory.cxx  CalcTqgammaPartonHistory.cxx  CalcTtbarPartonHistory.cxx  CalcTtbarbbbarPartonHistory.cxx  CalcTtgammaPartonHistory.cxx  CalcTthPartonHistory.cxx  CalcTtwPartonHistory.cxx  CalcTtzPartonHistory.cxx  CalcTzqPartonHistory.cxx  CalcWPartonHistory.cxx  CalcZPartonHistory.cxx  CalcZbPartonHistory.cxx  EventShape.cxx  FourTopTopology.cxx  HSTPFilterAlg.cxx  JetMatchingAlg.cxx  KLFitterAlg.cxx  KLFitterFinalizeOutputAlg.cxx  KLFitterResult.cxx  KLFitterResultAuxContainer.cxx  LinkDef.h  LorentzHelper.cxx  MatchingObjects.cxx  ONNXWrapper.cxx  ParticleLevel.cxx  ParticleLevelAlg.cxx  ParticleLevelSoftMuonAlg.cxx  (+29 more)
source/TopCPToolkit/Root/dict/: ContainerProxies.cxx
source/TopCPToolkit/Root/preloader/: ComponentFactoryPreloader.cxx
source/TopCPToolkit/TopCPToolkit/: BaseTopology.h  BoostedJetTaggersAlg.h  CARAlg.h  ComponentFactoryPreloader.h  EventShape.h  FourTopTopology.h  GraphBase.h  HSTPFilterAlg.h  JetMatchingAlg.h  KLFitterAlg.h  KLFitterEnums.h  KLFitterFinalizeOutputAlg.h  KLFitterResult.h  KLFitterResultAuxContainer.h  KLFitterResultContainer.h  MatchingObjects.h  ONNXWrapper.h  ParticleLevelAlg.h  ParticleLevelSoftMuonAlg.h  ParticleLevelSoftMuonOrigin.h  PartonHistoryToSpinInputAlg.h  PartonMatchAlg.h  PartonToJetsMatchAlg.h  RunHyPERAlg.h  RunNuFlowsAlg.h  RunPartonHistoryAlg.h  RunSpaNetAlg.h  RunTtbarNNLORecursiveRewAlg.h  SinglelepHadronicChi2RecoAlg.h  SoftMuonSelectorAlg.h  SpinHelpers.h  Tokenize.h  TopCPToolkitDict.h  TopSpinDensityMatrixAlg.h  ToponiumDileptonReconstructionAlg.h  TtbarTopology.h  TthTopology.h  TtzTopology.h  TutorialAlg.h  ZTopology.h  (+2 more)
source/TopCPToolkit/TopHyPER/: HyPERGraph.h  HyPERModel.h  HyPERParser.h  HyPERTopoReco.h  HyPERTtbarAllHadronicModel.h  HyPERTtbarAllHadronicParser.h  HyPERTtbarLJetsModel.h  HyPERTtbarLJetsParser.h  HyPERUtils.h
source/TopCPToolkit/TopNNLOReweighter/: NNLORewEnums.h  TtbarNNLORecursiveRew.h
source/TopCPToolkit/TopNuFlows/: Dilepton.h
source/TopCPToolkit/TopParticleLevel/: ParticleLevel.h
source/TopCPToolkit/TopSpaNet/: SpaNetEnums.h  TopologyBase.h  TopologyTtbarLjetsNu.h
source/TopCPToolkit/VectorHelpers/: AccessorHelpers.h  DecoratorHelpers.h  LorentzHelper.h
source/TopCPToolkit/python/: BoostedJetTaggersConfig.py  CARConfig.py  EventShapeConfig.py  HSTPFilterConfig.py  HyPERConfig.py  JetMatchingConfig.py  KLFitterConfig.py  ParticleLevelSoftMuonsConfig.py  PartonHistoryToSpinInputConfig.py  PartonMatchConfig.py  PartonToJetsMatchConfig.py  SinglelepHadronicChi2RecoConfig.py  SoftMuonSelectorConfig.py  TopNuFlowsConfig.py  TopSpaNetConfig.py  TopSpinDensityMatrixConfig.py  ToponiumDileptonReconstructionConfig.py  TtbarCPalgoConfigBlocksAnalysis.py  TtbarNNLORecursiveRewConfig.py  TutorialConfig.py  bishop.py  commonAlgoConfig.py  metaConfig.py  particleLevelConfig.py  truthConfig.py
source/TopCPToolkit/share/HyPER/: TtbarAllHadronic_run2_trained_on_even.onnx  TtbarAllHadronic_run2_trained_on_odd.onnx  TtbarAllHadronic_run3_trained_on_even.onnx  TtbarAllHadronic_run3_trained_on_odd.onnx  TtbarLJetsNoBTag_run2_trained_on_even.onnx  TtbarLJetsNoBTag_run2_trained_on_odd.onnx  TtbarLJetsNoBTag_run3_trained_on_even.onnx  TtbarLJetsNoBTag_run3_trained_on_odd.onnx  TtbarLJets_run2_trained_on_even.onnx  TtbarLJets_run2_trained_on_odd.onnx  TtbarLJets_run3_trained_on_even.onnx  TtbarLJets_run3_trained_on_odd.onnx
source/TopCPToolkit/share/configs/bTaggerCalibration/: particle.yaml  parton.yaml  reco.yaml
source/TopCPToolkit/share/configs/exampleDijetAnalysis/: reco.yaml
source/TopCPToolkit/share/configs/exampleNuFlows/: reco.yaml
source/TopCPToolkit/share/configs/exampleTtbarLjets/: particle.yaml  parton.yaml  reco.yaml
source/TopCPToolkit/share/configs/exampleTtbarLjets_SoftMuons/: particle.yaml  reco.yaml
source/TopCPToolkit/share/configs/tWZ/: reco.yaml
source/TopCPToolkit/share/configs/tutorial/: particle.yaml  reco.yaml  solution.yaml
source/TopCPToolkit/share/nuflows/nominal_v01_270824/: config.yaml  reco.yaml
source/TopCPToolkit/src/components/: TopCPToolkit_entries.cxx
(+38 files in other folders)
